[gd_scene load_steps=39 format=3 uid="uid://crejfo36g5bip"]

[ext_resource type="Script" uid="uid://6wbbc364xejy" path="res://video_streamer.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://n7xqvr4frt03" path="res://assets/cartdl/cartdl_01.png" id="5_b1qrp"]
[ext_resource type="Texture2D" uid="uid://3x8rwu1pugjh" path="res://assets/cartdl/cartdl_02.png" id="6_come4"]
[ext_resource type="Texture2D" uid="uid://cax2gmsno1vpj" path="res://assets/cartdl/cartdl_03.png" id="7_h8e4i"]
[ext_resource type="Texture2D" uid="uid://n2xpdysnwjex" path="res://assets/cartdl/cartdl_04.png" id="8_4lmeg"]
[ext_resource type="Texture2D" uid="uid://io06sq1ru1p0" path="res://assets/cartdl/cartdl_05.png" id="9_0cp0l"]
[ext_resource type="Texture2D" uid="uid://cj7335kohjri2" path="res://assets/cartdl/cartdl_06.png" id="10_d2t1y"]
[ext_resource type="Texture2D" uid="uid://8lad0p77spfx" path="res://assets/cartdl/cartdl_07.png" id="11_gngh3"]
[ext_resource type="Texture2D" uid="uid://c6gdk5jaud1n3" path="res://assets/cartdl/cartdl_08.png" id="12_0n3wm"]
[ext_resource type="Texture2D" uid="uid://rv62tsj16mgp" path="res://assets/cartdl/cartdl_09.png" id="13_qnost"]
[ext_resource type="Texture2D" uid="uid://d4mmt0qq2jrtt" path="res://assets/cartdl/cartdl_10.png" id="14_wnkbs"]
[ext_resource type="Texture2D" uid="uid://vwmw654vym65" path="res://assets/cartdl/cartdl_11.png" id="15_f6a44"]
[ext_resource type="Texture2D" uid="uid://1j6frm4ok8uk" path="res://assets/cartdl/cartdl_12.png" id="16_0cbny"]
[ext_resource type="Script" uid="uid://cvjxkw6ljrn0y" path="res://arranger.gd" id="16_2cqfq"]
[ext_resource type="Texture2D" uid="uid://cbxh7dbmgwxap" path="res://assets/cartdl/cartdl_13.png" id="17_hrvbo"]
[ext_resource type="Texture2D" uid="uid://dl3hsv4x8tfqh" path="res://assets/cartdl/cartdl_14.png" id="18_uypp3"]
[ext_resource type="Texture2D" uid="uid://nkssat6mefho" path="res://assets/cartdl/cartdl_15.png" id="19_blkrb"]
[ext_resource type="PackedScene" uid="uid://c5k0xmbhdlmaw" path="res://key.tscn" id="20_82xsv"]
[ext_resource type="Texture2D" uid="uid://6g8vp7jto4p1" path="res://assets/cartdl/cartdl_16.png" id="20_abqjc"]
[ext_resource type="FontFile" uid="uid://c2jlc3nt8y38q" path="res://assets/font/atlas-0.png" id="20_d13ii"]
[ext_resource type="Texture2D" uid="uid://shpx84pg158k" path="res://assets/pico8_logo_vector.png" id="23_1u8w0"]
[ext_resource type="Script" uid="uid://3yarkysfetgu" path="res://kb_toggler.gd" id="37_come4"]
[ext_resource type="PackedScene" uid="uid://bgklhpsaac82q" path="res://omnipad.tscn" id="41_0cp0l"]
[ext_resource type="Script" uid="uid://c7rts7fcblaav" path="res://run_pico_cmd.gd" id="41_4lmeg"]
[ext_resource type="PackedScene" uid="uid://dgbacxvbwjfsh" path="res://landscape_ui.tscn" id="42_land"]
[ext_resource type="Texture2D" uid="uid://cih0d0dnky0b5" path="res://assets/btn_x_normal.png" id="43_x_norm"]
[ext_resource type="Texture2D" uid="uid://c6bxpj3hmbwud" path="res://assets/btn_x_pressed.png" id="44_x_press"]
[ext_resource type="Texture2D" uid="uid://bv08ad6f60lbc" path="res://assets/btn_o_normal.png" id="45_o_norm"]
[ext_resource type="Texture2D" uid="uid://csbabskwk0hiv" path="res://assets/btn_o_pressed.png" id="46_o_press"]
[ext_resource type="Texture2D" uid="uid://xrb2fdeigmrg" path="res://assets/btn_esc_normal.png" id="47_esc_norm"]
[ext_resource type="Texture2D" uid="uid://dgcgu5h435dwx" path="res://assets/btn_esc_pressed.png" id="48_esc_press"]
[ext_resource type="Texture2D" uid="uid://dlu77ynuh6dl1" path="res://assets/btn_menu_normal.png" id="49_menu_norm"]
[ext_resource type="Texture2D" uid="uid://cts6512y2afit" path="res://assets/btn_menu_pressed.png" id="50_menu_press"]
[ext_resource type="PackedScene" uid="uid://b6p2v8g5q4x7y" path="res://options_menu.tscn" id="170_options"]

[sub_resource type="Gradient" id="Gradient_ig7tw"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0xm2m"]
gradient = SubResource("Gradient_ig7tw")
width = 128
height = 128
fill_to = Vector2(1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_0odxb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_b1qrp")
}, {
"duration": 1.0,
"texture": ExtResource("6_come4")
}, {
"duration": 1.0,
"texture": ExtResource("7_h8e4i")
}, {
"duration": 1.0,
"texture": ExtResource("8_4lmeg")
}, {
"duration": 1.0,
"texture": ExtResource("9_0cp0l")
}, {
"duration": 1.0,
"texture": ExtResource("10_d2t1y")
}, {
"duration": 1.0,
"texture": ExtResource("11_gngh3")
}, {
"duration": 1.0,
"texture": ExtResource("12_0n3wm")
}, {
"duration": 1.0,
"texture": ExtResource("13_qnost")
}, {
"duration": 1.0,
"texture": ExtResource("14_wnkbs")
}, {
"duration": 1.0,
"texture": ExtResource("15_f6a44")
}, {
"duration": 1.0,
"texture": ExtResource("16_0cbny")
}, {
"duration": 1.0,
"texture": ExtResource("17_hrvbo")
}, {
"duration": 1.0,
"texture": ExtResource("18_uypp3")
}, {
"duration": 1.0,
"texture": ExtResource("19_blkrb")
}, {
"duration": 1.0,
"texture": ExtResource("20_abqjc")
}],
"loop": true,
"name": &"dl",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_abqjc")
}, {
"duration": 1.0,
"texture": ExtResource("19_blkrb")
}, {
"duration": 1.0,
"texture": ExtResource("18_uypp3")
}, {
"duration": 1.0,
"texture": ExtResource("17_hrvbo")
}, {
"duration": 1.0,
"texture": ExtResource("16_0cbny")
}, {
"duration": 1.0,
"texture": ExtResource("15_f6a44")
}, {
"duration": 1.0,
"texture": ExtResource("14_wnkbs")
}, {
"duration": 1.0,
"texture": ExtResource("13_qnost")
}, {
"duration": 1.0,
"texture": ExtResource("12_0n3wm")
}, {
"duration": 1.0,
"texture": ExtResource("11_gngh3")
}, {
"duration": 1.0,
"texture": ExtResource("10_d2t1y")
}, {
"duration": 1.0,
"texture": ExtResource("9_0cp0l")
}, {
"duration": 1.0,
"texture": ExtResource("8_4lmeg")
}, {
"duration": 1.0,
"texture": ExtResource("7_h8e4i")
}, {
"duration": 1.0,
"texture": ExtResource("6_come4")
}, {
"duration": 1.0,
"texture": ExtResource("5_b1qrp")
}],
"loop": true,
"name": &"dl_1",
"speed": 15.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_7dm0k"]
viewport_path = NodePath("Display")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d13ii"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("loading", "display", "displayContainer")]
script = ExtResource("1_ig7tw")
loading = NodePath("Display/loading")
display = NodePath("Display/Display")
displayContainer = NodePath("Arranger/displayContainer")

[node name="runcmd" type="Node" parent="."]
script = ExtResource("41_4lmeg")

[node name="OptionsMenu" parent="." instance=ExtResource("170_options")]


[node name="Display" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(128, 128)

[node name="Display" type="Sprite2D" parent="Display"]
position = Vector2(64, 64)
texture = SubResource("GradientTexture2D_0xm2m")

[node name="loading" type="AnimatedSprite2D" parent="Display"]
texture_filter = 1
position = Vector2(64, 64)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_0odxb")
animation = &"dl"
autoplay = "dl_1"

[node name="Arranger" type="Control" parent="." node_paths=PackedStringArray("rect")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("16_2cqfq")
rect = NodePath("ActiveArea")

[node name="ActiveArea" type="ReferenceRect" parent="Arranger"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 300.0
mouse_filter = 2
border_color = Color(0.195284, 0.551135, 0.869855, 1)

[node name="displayContainer" type="Sprite2D" parent="Arranger"]
texture_filter = 1
position = Vector2(0, 12)
texture = SubResource("ViewportTexture_7dm0k")
centered = false

[node name="Camera2D" type="Camera2D" parent="Arranger"]
offset = Vector2(256, 256)
enabled = false

[node name="kbanchor" type="Node2D" parent="Arranger"]
position = Vector2(0, 300)

[node name="HBoxContainer" type="HBoxContainer" parent="Arranger/kbanchor"]
offset_top = -150.0
offset_right = 128.0
offset_bottom = -137.0

[node name="Keyboard Btn" type="Button" parent="Arranger/kbanchor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("20_d13ii")
theme_override_font_sizes/font_size = 5
theme_override_styles/focus = SubResource("StyleBoxEmpty_d13ii")
text = "fULL kEYBOARD"



[node name="kb_pocketchip" type="Node2D" parent="Arranger/kbanchor"]
visible = false
position = Vector2(0, -125)
script = ExtResource("37_come4")

[node name="Key" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_top = 44.0
offset_right = 5.5
offset_bottom = 53.0
key_id = "Q"
cap_text = "q"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key37" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_top = 2.0
offset_right = 5.5
offset_bottom = 11.0
key_id = "Escape"
cap_text = "ESC"
font_type = 3
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key2" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 13.0
offset_top = 44.0
offset_right = 18.5
offset_bottom = 53.0
key_id = "W"
cap_text = "w"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key50" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 23.0
offset_top = 28.0
offset_right = 29.0
offset_bottom = 35.0
key_id = "Down"
cap_type = 1
cap_text = "02"
font_type = 4
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key52" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 13.0
offset_top = 15.0
offset_right = 19.0
offset_bottom = 22.0
cap_type = 1
cap_text = "03"
font_type = 4
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key53" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 23.0
offset_top = 2.0
offset_right = 29.0
key_id = "Up"
cap_type = 1
cap_text = "01"
font_type = 4
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key51" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 33.0
offset_top = 15.0
offset_right = 39.0
offset_bottom = 22.0
key_id = "Right"
cap_type = 1
cap_text = "04"
font_type = 4
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key3" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 26.0
offset_top = 44.0
offset_right = 31.5
offset_bottom = 53.0
key_id = "E"
cap_text = "e"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key4" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 39.0
offset_top = 44.0
offset_right = 44.5
offset_bottom = 53.0
key_id = "R"
cap_text = "r"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key5" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 52.0
offset_top = 44.0
offset_right = 57.5
offset_bottom = 53.0
key_id = "T"
cap_text = "t"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key6" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 65.0
offset_top = 44.0
offset_right = 70.5
offset_bottom = 53.0
key_id = "Y"
cap_text = "y"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key7" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 78.0
offset_top = 44.0
offset_right = 83.5
offset_bottom = 53.0
key_id = "U"
cap_text = "u"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key8" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 91.0
offset_top = 44.0
offset_right = 96.5
offset_bottom = 53.0
key_id = "I"
cap_text = "i"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key9" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 104.0
offset_top = 44.0
offset_right = 109.5
offset_bottom = 53.0
key_id = "O"
cap_text = "o"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key10" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 117.0
offset_top = 44.0
offset_right = 122.5
offset_bottom = 53.0
key_id = "P"
cap_text = "p"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key12" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_top = 64.0
offset_right = 5.5
offset_bottom = 73.0
key_id = "A"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key13" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 13.0
offset_top = 64.0
offset_right = 18.5
offset_bottom = 73.0
key_id = "S"
cap_text = "s"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key14" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 26.0
offset_top = 64.0
offset_right = 31.5
offset_bottom = 73.0
key_id = "D"
cap_text = "d"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key15" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 39.0
offset_top = 64.0
offset_right = 44.5
offset_bottom = 73.0
key_id = "F"
cap_text = "f"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key16" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 52.0
offset_top = 64.0
offset_right = 57.5
offset_bottom = 73.0
key_id = "G"
cap_text = "g"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key17" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 65.0
offset_top = 64.0
offset_right = 70.5
offset_bottom = 73.0
key_id = "H"
cap_text = "h"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key18" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 78.0
offset_top = 64.0
offset_right = 83.5
offset_bottom = 73.0
key_id = "J"
cap_text = "j"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key19" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 91.0
offset_top = 64.0
offset_right = 96.5
offset_bottom = 73.0
key_id = "K"
cap_text = "k"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key20" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 104.0
offset_top = 64.0
offset_right = 109.5
offset_bottom = 73.0
key_id = "L"
cap_text = "l"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key38" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 46.0
offset_top = 2.0
offset_right = 51.5
offset_bottom = 11.0
key_id = "1"
cap_text = "1"
cap_type_shift = 0
cap_text_shift = "!"
shift_unicode_override = "!"
metadata/_edit_use_anchors_ = true

[node name="Key39" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 59.0
offset_top = 2.0
offset_right = 64.5
offset_bottom = 11.0
key_id = "3"
cap_text = "3"
cap_type_shift = 0
cap_text_shift = "#"
shift_unicode_override = "#"
metadata/_edit_use_anchors_ = true

[node name="Key40" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 72.0
offset_top = 2.0
offset_right = 77.5
offset_bottom = 11.0
key_id = "5"
cap_text = "5"
cap_type_shift = 0
cap_text_shift = "%"
shift_unicode_override = "%"
metadata/_edit_use_anchors_ = true

[node name="Key41" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 85.0
offset_top = 2.0
offset_right = 90.5
offset_bottom = 11.0
key_id = "7"
cap_text = "7"
cap_type_shift = 0
cap_text_shift = "&"
shift_unicode_override = "&"
metadata/_edit_use_anchors_ = true

[node name="Key42" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 98.0
offset_top = 2.0
offset_right = 103.5
offset_bottom = 11.0
key_id = "9"
cap_text = "9"
cap_type_shift = 0
cap_text_shift = "("
shift_unicode_override = "("
metadata/_edit_use_anchors_ = true

[node name="Key43" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 111.0
offset_top = 2.0
offset_right = 116.5
offset_bottom = 11.0
key_id = "Minus"
cap_text = "-"
cap_type_shift = 0
cap_text_shift = "_"
shift_unicode_override = "_"
metadata/_edit_use_anchors_ = true

[node name="Key49" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 117.0
offset_top = 22.0
offset_right = 122.5
offset_bottom = 31.0
key_id = "Equal"
cap_text = "="
cap_type_shift = 0
cap_text_shift = "+"
shift_unicode_override = "+"
metadata/_edit_use_anchors_ = true

[node name="Key44" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 52.0
offset_top = 22.0
offset_right = 57.5
offset_bottom = 31.0
key_id = "2"
cap_text = "2"
cap_type_shift = 0
cap_text_shift = "@"
shift_unicode_override = "@"
metadata/_edit_use_anchors_ = true

[node name="Key45" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 65.0
offset_top = 22.0
offset_right = 70.5
offset_bottom = 31.0
key_id = "4"
cap_text = "4"
cap_type_shift = 0
cap_text_shift = "$"
shift_unicode_override = "$"
metadata/_edit_use_anchors_ = true

[node name="Key46" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 78.0
offset_top = 22.0
offset_right = 83.5
offset_bottom = 31.0
key_id = "6"
cap_text = "6"
cap_type_shift = 0
cap_text_shift = "^"
shift_unicode_override = "^"
metadata/_edit_use_anchors_ = true

[node name="Key47" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 91.0
offset_top = 22.0
offset_right = 96.5
offset_bottom = 31.0
key_id = "8"
cap_text = "8"
cap_type_shift = 0
cap_text_shift = "*"
shift_unicode_override = "*"
metadata/_edit_use_anchors_ = true

[node name="Key48" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 104.0
offset_top = 22.0
offset_right = 109.5
offset_bottom = 31.0
key_id = "0"
cap_text = "0"
cap_type_shift = 0
cap_text_shift = ")"
shift_unicode_override = ")"
metadata/_edit_use_anchors_ = true

[node name="Key11" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 13.0
offset_top = 104.0
offset_right = 18.5
offset_bottom = 113.0
key_id = "Shift"
cap_text = "SH
FT"
font_type = 3
can_lock = true
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key32" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 26.0
offset_top = 104.0
offset_right = 31.5
offset_bottom = 113.0
key_id = "Alt"
cap_text = "ALT"
font_type = 3
can_lock = true
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key33" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 39.0
offset_top = 104.0
offset_right = 57.5
offset_bottom = 113.0
key_id = "Space"
cap_text = " "
font_type = 3
metadata/_edit_use_anchors_ = true

[node name="Key31" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_top = 104.0
offset_right = 5.5
offset_bottom = 113.0
key_id = "Ctrl"
cap_text = "CT
RL"
font_type = 3
can_lock = true
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key21" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_top = 84.0
offset_right = 5.5
offset_bottom = 93.0
key_id = "Tab"
cap_text = "TAB"
font_type = 3
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key22" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 13.0
offset_top = 84.0
offset_right = 18.5
offset_bottom = 93.0
key_id = "Z"
cap_text = "z"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key23" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 26.0
offset_top = 84.0
offset_right = 31.5
offset_bottom = 93.0
key_id = "X"
cap_text = "x"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key24" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 39.0
offset_top = 84.0
offset_right = 44.5
offset_bottom = 93.0
key_id = "C"
cap_text = "c"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key25" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 52.0
offset_top = 84.0
offset_right = 57.5
offset_bottom = 93.0
key_id = "V"
cap_text = "v"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key26" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 65.0
offset_top = 84.0
offset_right = 70.5
offset_bottom = 93.0
key_id = "B"
cap_text = "b"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key27" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 78.0
offset_top = 84.0
offset_right = 83.5
offset_bottom = 93.0
key_id = "N"
cap_text = "n"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key28" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 91.0
offset_top = 84.0
offset_right = 96.5
offset_bottom = 93.0
key_id = "M"
cap_text = "m"
font_type = 2
special_behaviour = 1
metadata/_edit_use_anchors_ = true

[node name="Key29" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 104.0
offset_top = 84.0
offset_right = 109.5
offset_bottom = 93.0
key_id = "Semicolon"
cap_text = ";"
cap_type_shift = 0
cap_text_shift = ":"
shift_unicode_override = ":"
metadata/_edit_use_anchors_ = true

[node name="Key54" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 117.0
offset_top = 84.0
offset_right = 122.5
offset_bottom = 93.0
key_id = "Enter"
cap_text = "RET"
font_type = 3
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key55" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 117.0
offset_top = 64.0
offset_right = 122.5
offset_bottom = 73.0
key_id = "Backspace"
key_id_shift_override = "Delete"
cap_text = "BK
SP"
cap_type_shift = 0
cap_text_shift = "DEL"
font_type = 3
unicode = false
metadata/_edit_use_anchors_ = true

[node name="Key34" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 78.0
offset_top = 104.0
offset_right = 83.5
offset_bottom = 113.0
key_id = "Comma"
cap_text = ","
cap_type_shift = 0
cap_text_shift = "<"
shift_unicode_override = "<"
metadata/_edit_use_anchors_ = true

[node name="Key35" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 91.0
offset_top = 104.0
offset_right = 96.5
offset_bottom = 113.0
key_id = "Period"
cap_text = "."
cap_type_shift = 0
cap_text_shift = ">"
shift_unicode_override = ">"
metadata/_edit_use_anchors_ = true

[node name="Key36" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 104.0
offset_top = 104.0
offset_right = 109.5
offset_bottom = 113.0
key_id = "Slash"
cap_text = "/"
cap_type_shift = 0
cap_text_shift = "?"
shift_unicode_override = "?"
metadata/_edit_use_anchors_ = true

[node name="Key56" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_left = 117.0
offset_top = 104.0
offset_right = 122.5
offset_bottom = 113.0
key_id = "Apostrophe"
cap_text = "'"
cap_type_shift = 0
cap_text_shift = "\""
shift_unicode_override = "?"
metadata/_edit_use_anchors_ = true

[node name="Key30" parent="Arranger/kbanchor/kb_pocketchip" instance=ExtResource("20_82xsv")]
offset_top = 22.0
offset_right = 5.5
offset_bottom = 31.0
key_id = "QuoteLeft"
cap_text = "`"
cap_type_shift = 0
cap_text_shift = "~"
shift_unicode_override = "~"
metadata/_edit_use_anchors_ = true

[node name="kb_gaming" type="Node2D" parent="Arranger/kbanchor"]
position = Vector2(0, -126)
script = ExtResource("37_come4")
type = 0

[node name="Pico8LogoVector" type="Sprite2D" parent="Arranger/kbanchor/kb_gaming"]
position = Vector2(65, 110)
scale = Vector2(0.21, 0.21)
texture = ExtResource("23_1u8w0")

[node name="esc" parent="Arranger/kbanchor/kb_gaming" instance=ExtResource("20_82xsv")]
offset_left = 77.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 10.0
texture = ExtResource("47_esc_norm")
patch_margin_left = 0
patch_margin_top = 0
patch_margin_right = 0
patch_margin_bottom = 0
key_id = "Escape"
cap_text = "eSC"
font_type = 3
unicode = false
texture_normal = ExtResource("47_esc_norm")
texture_pressed = ExtResource("48_esc_press")
metadata/_edit_use_anchors_ = true

[node name="P" parent="Arranger/kbanchor/kb_gaming" instance=ExtResource("20_82xsv")]
offset_left = 103.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 10.0
texture = ExtResource("49_menu_norm")
patch_margin_left = 0
patch_margin_top = 0
patch_margin_right = 0
patch_margin_bottom = 0
key_id = "P"
cap_text = "pAUSE"
font_type = 3
unicode = false
texture_normal = ExtResource("49_menu_norm")
texture_pressed = ExtResource("50_menu_press")
metadata/_edit_use_anchors_ = true

[node name="Z" parent="Arranger/kbanchor/kb_gaming" instance=ExtResource("20_82xsv")]
offset_left = 102.0
offset_top = 24.0
offset_right = 113.0
offset_bottom = 35.0
texture = ExtResource("45_o_norm")
patch_margin_left = 0
patch_margin_top = 0
patch_margin_right = 0
patch_margin_bottom = 0
key_id = "Z"
cap_type = 1
cap_text = "06"
font_type = 4
special_behaviour = 1
texture_normal = ExtResource("45_o_norm")
texture_pressed = ExtResource("46_o_press")
metadata/_edit_use_anchors_ = true

[node name="X" parent="Arranger/kbanchor/kb_gaming" instance=ExtResource("20_82xsv")]
offset_left = 77.0
offset_top = 39.0
offset_right = 88.0
offset_bottom = 50.0
texture = ExtResource("43_x_norm")
patch_margin_left = 0
patch_margin_top = 0
patch_margin_right = 0
patch_margin_bottom = 0
key_id = "X"
cap_type = 1
cap_text = "05"
font_type = 4
special_behaviour = 1
texture_normal = ExtResource("43_x_norm")
texture_pressed = ExtResource("44_x_press")
metadata/_edit_use_anchors_ = true

[node name="Onmipad" parent="Arranger/kbanchor/kb_gaming" instance=ExtResource("41_0cp0l")]
offset_left = 3.0
offset_top = 4.0
offset_right = 47.0
offset_bottom = 47.0
scale = Vector2(0.85, 0.85)
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="LandscapeUI" parent="." instance=ExtResource("42_land")]
visible = false
